package modele;

import java.util.Date;

public class Infrastructure {

    private TypeInfrastructure typeInfrastructure;
    private String nom;
    private int prix;
    private int niveau;


}
